Corrected issues found during findbugs analysis